Improve error handling and add logging (application + tomcat)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port = 8090
 
 # Property to control the evaluator engine to inject
 evalme.math.engine=jeval
+
+# Tomcat access logs configuration
+server.tomcat.basedir=./
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.pattern=%t|%{User-Agent}i|%m|%U|%q|%s|%B|%D|%{Content-Length}i|%A
